# hierarchicaldd

./: CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/Domain_Decomposition_CPU_Only/: CMakeLists.txt
demos/Domain_Decomposition_CPU_Only/Interface_Solver/: INTERFACE_MATRIX_GENERATOR.h  INTERFACE_SOLVER_DATA.h  SIGMA_MULTIGRID_SOLVER.cpp  SIGMA_SMOOTHER.cpp
demos/Domain_Decomposition_CPU_Only/SPGrid_Domain_Decomposition_Solver/: CG_SYSTEM.cpp  CONJUGATE_GRADIENT_DUMPING.cpp  SPGrid_Block_Pair_Weaver.h  SPGrid_Domain_Decomposition_Preconditioner.h  SPGrid_Domain_Decomposition_Preconditioner.h~  SPGrid_Domain_Decomposition_Solver.h  SPGrid_Domain_Divider_Helper.h  SPGrid_Flag_Helper.h  SPGrid_Linearized_Data_Copy_Hashtable_Helper.h  SPGrid_Master_Array_Linearizer.h  SPGrid_Subdomain_Splitter.h
demos/Domain_Decomposition_CPU_Only/SPGrid_Library/: CG_VECTOR.cpp  CG_VECTOR.h  GRID_HIERARCHY_INITIALIZER.cpp  SPGRID_MULTIGRID_FLAGS.h  SPGrid_Correction_Legacy.h  SPGrid_DD_Wrapper.h  SPGrid_Flag_Boundary_Helper.h  SPGrid_Flag_Helper.h  SPGrid_Laplace_Legacy.h  SPGrid_Restriction_Legacy.h  SPGrid_V_Cycle_Helper.h
demos/Domain_Decomposition_CPU_Only/Test_Bench_2D/: main.cpp
demos/Domain_Decomposition_CPU_Only/Test_Bench_3D/: main.cpp
demos/Domain_Decomposition_CPU_Only_Two_Levels/: CMakeLists.txt
demos/Domain_Decomposition_CPU_Only_Two_Levels/Interface_Solver/: EIGEN_INTERFACE.cpp  EIGEN_INTERFACE.h  GRID_HIERARCHY_INSTANTIATION_HELPER.cpp  INTERFACE_MATRIX_GENERATOR.h  PROLONGATION_MATRIX_HELPER.cpp  SIGMA_SMOOTHER.cpp
demos/Domain_Decomposition_CPU_Only_Two_Levels/SPGrid_Domain_Decomposition_Solver/: CG_VECTOR.cpp  CONJUGATE_GRADIENT_DUMPING.h  SPGrid_Domain_Decomposition_MPI.h  SPGrid_Domain_Decomposition_Preconditioner.h  SPGrid_Domain_Decomposition_Preconditioner.h~  SPGrid_Domain_Decomposition_Solver.h  SPGrid_Domain_Divider_Helper.h  SPGrid_Subdomain_Splitter.h
demos/Domain_Decomposition_CPU_Only_Two_Levels/SPGrid_Library/: CG_SYSTEM.h  SPGRID_MULTIGRID_DATA.h  SPGrid_Domain_Divider_Helper.h  SPGrid_Laplace_Legacy.h  SPGrid_Prolongation_Legacy.h
demos/Domain_Decomposition_CPU_Only_Two_Levels/Test_Bench_2D/: dd_pcg_nocona  main.cpp  main_client_cpu.cpp  main_client_phi.cpp
demos/Domain_Decomposition_CPU_Only_Two_Levels/Test_Bench_3D/: dd_pcg_nocona  main.cpp
demos/Domain_Decomposition_CUDA_Matrix_Free/: CMakeLists.txt
demos/Domain_Decomposition_CUDA_Matrix_Free/CUDA_Kernels/: Clear_Helper_CUDA.cu  Clear_Helper_CUDA.h  Correction_Helper_CUDA.cu  Correction_Helper_CUDA.h  Interface_Block_Helper_CUDA.cu  Interface_Block_Helper_CUDA.h  Laplace_Helper_CUDA.cu  Laplace_Helper_CUDA.h  Laplace_Helper_CUDA_Adaptive.cu  Laplace_Helper_CUDA_Adaptive.h  Makefile.bk  Minus_Laplace_Helper_CUDA.cu  Minus_Laplace_Helper_CUDA.h  Norm_Helper_CUDA.cu  Norm_Helper_CUDA.h  Prolongation_Helper_CUDA.cu  Prolongation_Helper_CUDA.h  Residual_Helper_CUDA.cu  Residual_Helper_CUDA.h  Restriction_Helper_CUDA.cu  Restriction_Helper_CUDA.h  SPGrid_CUDA_Array_Linearizer.h  SPGrid_V_Cycle_Helper_CUDA.h  Smoother_Helper_CUDA.cu  Smoother_Helper_CUDA.h  Smoother_In_Cache_Helper_CUDA.cu  Smoother_In_Cache_Helper_CUDA.h
demos/Domain_Decomposition_CUDA_Matrix_Free/Interface_Solver/: CELL_PROLONGATION_BAKER.h  EIGEN_INTERFACE.h  GALERKIN_PROCESS.h  GRID_HIERARCHY_ITERATOR_INSTANTIATION_HELPER.cpp  INTERFACE_MATRIX_GENERATOR.h  INTERFACE_SOLVER_DATA.h  PROLONGATION_MATRIX_HELPER.h  SIGMA_MULTIGRID_SOLVER.h  SIGMA_SMOOTHER.cpp  SIGMA_SMOOTHER.h  SPGRID_WRITER.h
demos/Domain_Decomposition_CUDA_Matrix_Free/Nodes/: Client_Node_CUDA.cpp  Client_Node_CUDA.h  Client_Node_MPI.cpp  Client_Node_MPI.h  Command.h  Communicator.cpp  Communicator.h  Overseer.cpp  Overseer.h  Subdomain_Solver_CUDA.h
demos/Domain_Decomposition_CUDA_Matrix_Free/SPGrid_Domain_Decomposition_Solver/: #CG_VECTOR.h#  #SPGrid_Subdomain_Spliter.h#  ADAPTIVE_PROGRESS_INDICATOR.h  CG_SYSTEM.cpp  HIERARCHICAL_RANGE_ITERATOR.h  SPGRID_DOMAIN_DECOMPOSITION_DATA.h  SPGRID_READ_WRITE.h  SPGrid_Domain_Decomposition_Preconditioner.h  SPGrid_Domain_Decomposition_Solver.h  SPGrid_Domain_Decomposition_Solver.h~  SPGrid_Domain_Divider_Helper.h  SPGrid_Gemini_Arithmetic_Helpers.h  SPGrid_Linearized_Data_Copy_Helper.h  SPGrid_Master_Array_Linearizer.h  SPGrid_Subdomain_Rasterizer.h  SPGrid_Subdomain_Splitter.h  SPGrid_V_Cycle_Topology.h
demos/Domain_Decomposition_CUDA_Matrix_Free/SPGrid_Library/: CG_SYSTEM.cpp  CONJUGATE_GRADIENT.h  GRID_HIERARCHY.cpp  SPGrid_Copy_Interior.h  SPGrid_Eigen_Matrix_Wrapper.h  SPGrid_Laplace_Legacy.h  SPGrid_Residual_Legacy.h  SPGrid_V_Cycle_Topology.h
demos/Domain_Decomposition_CUDA_Matrix_Free/Test_Bench_3D/: main.cpp  main_client_phi.cpp
demos/Domain_Decomposition_KNL/: CMakeLists.txt
demos/Domain_Decomposition_KNL/Interface_Solver/: ADAPTIVE_SUBDOMAIN_POISSON_DATA.h  ADAPTIVE_SUBDOMAIN_POISSON_FLAGS.h  BOUNDARY_REFINEMENT_RASTERIZER.h  CELL_PROLONGATION_BAKER.h  EIGEN_INTERFACE.cpp  GALERKIN_PROCESS.h  INTERFACE_SOLVER_DATA.h  SIGMA_MULTIGRID_SOLVER.cpp  SIGMA_MULTIGRID_SOLVER.h  SIGMA_SMOOTHER.cpp  STRIDE_GENERATOR.h
demos/Domain_Decomposition_KNL/KNL_Libraries/: KNL_OVERSEER.cpp  KNL_OVERSEER.h  SPGrid_KNL_Array_Linearizer.h
demos/Domain_Decomposition_KNL/KNL_Libraries/Kernels/: Clear_Helper_Phi.cpp  Clear_Helper_Phi.h  (+11 more)
demos/Domain_Decomposition_KNL/SPGrid_Domain_Decomposition_Solver/: CG_SYSTEM.cpp  CG_SYSTEM.h  CG_VECTOR.h  SPGRID_READ_WRITE.h  SPGrid_Convertor.h  SPGrid_Domain_Decomposition_Preconditioner.h  SPGrid_Domain_Decomposition_Preconditioner.h~  SPGrid_Domain_Decomposition_Solver.h  SPGrid_Flag_Boundary_Helper.h  SPGrid_Gemini.h  SPGrid_Master_Array_Linearizer.h  SPGrid_Subdomain_Rasterizer.h  SPGrid_Subdomain_Splitter.h  SPGrid_V_Cycle_Topology.h
demos/Domain_Decomposition_KNL/Test_Bench_3D/: main.cpp
demos/SPGrid_Create_Simple_Domain/: CMakeLists.txt  SPGRID_READ_WRITE.h  SPGrid_Flag_Helper.h
demos/SPGrid_Create_Simple_Domain/Create_2D_Domain/: main.cpp
demos/SPGrid_Create_Simple_Domain/Create_3D_Domain/: main.cpp
tools/opengl_3d/: CMakeLists.txt  main.cpp
(+525 files in other folders)
